--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,15 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.1.1'
+
+    final SUPPORT_LIBRARY_VERSION = '23.1.1'
+
+    compile "com.android.support:appcompat-v7:$SUPPORT_LIBRARY_VERSION"
+    compile "com.android.support:cardview-v7:$SUPPORT_LIBRARY_VERSION"
+    compile "com.android.support:design:$SUPPORT_LIBRARY_VERSION"
+    compile "com.android.support:recyclerview-v7:$SUPPORT_LIBRARY_VERSION"
+
+    compile 'com.jakewharton:butterknife:7.0.1'
 
     compile 'com.squareup.retrofit:retrofit:1.9.0'
 
